scrollbar added & image icon fixed

--- a/src/app/_common.scss
+++ b/src/app/_common.scss
@@ -3,6 +3,7 @@
     position: absolute;
     bottom: 0px;
     right: 0px;
+    padding: 5px;
     background: black ;
     color: #fff;
     border: none;
