--- a/src/components/posted-jobs/PostedJobDetail.module.scss
+++ b/src/components/posted-jobs/PostedJobDetail.module.scss
@@ -91,7 +91,7 @@
         }
         .actionContainer{
             align-items: center;
-            gap: 24px;
+            gap: 14px;
             display: flex;
             .editButton{
                 padding: 13px 30px;
